# lipa-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/lipa_py/: __init__.py
src/lipa_py/airtel_money/: __init__.py  client.py  router.py  schemas.py
src/lipa_py/mpesa/: __init__.py  client.py  crypto.py  router.py  schemas.py
src/lipa_py/safaricom/: __init__.py  client.py  crypto.py  router.py  schemas.py
src/lipa_py/selcom/: __init__.py  client.py  crypto.py  router.py  schemas.py
src/lipa_py/tigo_pesa/: __init__.py  client.py  router.py  schemas.py
src/lipa_py/tips/: __init__.py  client.py  router.py  schemas.py
src/lipa_py/unified/: __init__.py  client.py  schemas.py
tests/: conftest.py  test_airtel_client.py  test_mpesa_client.py  test_mpesa_crypto.py  test_safaricom_client.py  test_safaricom_crypto.py  test_selcom_client.py  test_selcom_crypto.py  test_tigo_client.py  test_tips_client.py  test_unified.py
